web: temporarily remove links to the UserSettingsPage (for sep20 release)

--- a/web/src/nav/_Navbar.scss
+++ b/web/src/nav/_Navbar.scss
@@ -26,6 +26,10 @@
             width: 2rem;
             height: 2rem;
         }
+
+        .avatar {
+            margin-right: 1rem;
+        }
     }
 
     &__logo-link,
