Use RepoBreadcrumb in ReferencesGroup

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -160,6 +160,7 @@ a {
     outline: 0;
     color: #93A9C8;
     transition: color 100ms ease-out;
+    text-decoration: none;
     &:hover {
         color: white;
     }
