Fix avatar margin

--- a/web/src/nav/_Navbar.scss
+++ b/web/src/nav/_Navbar.scss
@@ -27,8 +27,8 @@
             height: 2rem;
         }
 
-        .avatar {
-            margin-right: 1rem;
+        .sign-out-button {
+            margin-left: 1rem;
         }
     }
 
