--- a/web/src/search/_Search.scss
+++ b/web/src/search/_Search.scss
@@ -24,8 +24,10 @@
             align-items: center;
             margin: 0 1rem;
         }
+        .sign-out-button {
+            margin-left: 1rem;
+        }
         .avatar {
-            margin-right: 1rem;
             height: 2rem;
             width: 2rem;
         }
