Fix Safari SearchBox padding
Fixes #7321

--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -141,7 +141,7 @@
     }
 
     &__suggestions {
-        margin-top: 0.5rem;
+        padding-top: 0.5rem;
         max-height: 25rem;
         overflow-y: auto;
     }
