Add custom signup / login form (#7330)
* web: add custom signup / login form

* app: add auth0-js

* app: implement client auth0 login/sign up

* metrics

* address review

* rm sign in

* address review

* fixes

* package-json

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -24,6 +24,7 @@ $media-xl: 1200px;
 @import './components/HeroPage';
 @import './settings/SettingsPage';
 @import './settings/auth/EditorAuthPage';
+@import './settings/auth/SignInPage';
 @import './settings/user/UserProfilePage';
 
 // Define the 'system' font family
@@ -176,6 +177,21 @@ h1 {
     margin: 0 0 1rem;
 }
 
+.ui-text-input {
+    display: block;
+    margin: .5rem;
+    padding: .5rem;
+    border: none;
+    outline: none;
+    background: #333a44;
+    color: white;
+    font-size: inherit;
+    line-height: 1.5rem;
+    &::placeholder {
+        color: #93A9C8;
+    }
+}
+
 .ui-button {
     display: inline-block;
     background: #0CA678;
@@ -184,6 +200,7 @@ h1 {
     color: #FFFFFF;
     font-size: inherit;
     text-decoration: none;
+    border: none;
     cursor: pointer;
     transition: all 100ms ease-out;
     &:hover {
