--- a/web/src/settings/_SettingsPage.scss
+++ b/web/src/settings/_SettingsPage.scss
@@ -1,14 +1,20 @@
+@import './SettingsSidebar';
+@import './team/Team';
+
 .settings-page {
     flex: 1 1 auto;
     display: flex;
     margin-top: 1em;
-    color: #C9D4E3;
-    
+    line-height: 1.5rem;
+    overflow: hidden;
+    border-radius: 0.25rem;
+
     &__content {
         flex: 1 1 auto;
+        padding: 1rem;
         background-color: #151D28;
     }
-    
+
     &__form {
         flex: 1 0 auto;
         display: flex;
