Add button for editor auth to settings, fix styling on editor auth page (#7420)

--- a/web/src/settings/auth/_EditorAuthPage.scss
+++ b/web/src/settings/auth/_EditorAuthPage.scss
@@ -1,4 +1,8 @@
 .editor-auth-page {
+    &__session-id-container {
+        display: flex;
+    }
+
     &__session-id {
         flex: 1 0 auto;
         background-color: inherit;
