Fix accepting invites

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -291,6 +291,10 @@ h1 {
     margin-top: 0.25rem;
 }
 
+.text-error {
+    color: $color-error;
+}
+
 .ui-section {
     padding: 1.5rem;
     display: flex;
