Fix suggestions margin

--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -116,6 +116,7 @@
 
     &__suggestions {
         max-height: 25rem;
+        margin: 0;
         margin-top: 0.5rem;
         overflow-y: auto;
     }
