--- a/web/src/settings/_SettingsPage.scss
+++ b/web/src/settings/_SettingsPage.scss
@@ -14,6 +14,7 @@
         flex: 1 1 auto;
         padding: 1rem;
         background-color: #151D28;
+        overflow-y: auto;
     }
 
     &__form {
