Fix webapp scrolling on sign in (#7469)

--- a/web/src/components/_HeroPage.scss
+++ b/web/src/components/_HeroPage.scss
@@ -10,6 +10,7 @@
     text-align: center;
     align-items: center;
     color: #93A9C8;
+    overflow-y: auto;
 
     &__icon {
         border-radius: 100%;
