--- a/web/src/settings/_SettingsPage.scss
+++ b/web/src/settings/_SettingsPage.scss
@@ -1,6 +1,7 @@
 @import './SettingsSidebar';
 @import './team/Team';
 @import './team/AcceptInvitePage';
+@import './EditorAuthPage';
 
 .settings-page {
     flex: 1 1 auto;
