web: fix no implicit any

--- a/web/src/tree/_Tree.scss
+++ b/web/src/tree/_Tree.scss
@@ -41,5 +41,10 @@
 
     &__row-icon {
         margin-right: .25rem;
+
+        .icon, svg {
+            fill: currentColor;
+            width: 1rem;
+        }
     }
 }
