--- a/web/src/references/_ReferencesWidget.scss
+++ b/web/src/references/_ReferencesWidget.scss
@@ -42,7 +42,14 @@
     &__expand-icon {
         margin-left: auto;
         margin-right: 15px;
-        font-size: 1.5rem;
+
+        display: flex;
+
+        .icon, svg {
+            fill: currentColor;
+            width: 1rem;
+            height: 1rem;
+        }
     }
 
     &__reference {
@@ -129,8 +136,15 @@
     &__close-icon {
         flex: none;
         cursor: pointer;
-        font-size: 18px;
         margin-left: auto;
+
+        display: flex;
+
+        .icon, svg {
+            fill: currentColor;
+            width: 1rem;
+            height: 1rem;
+        }
 
         &:hover {
             color: white;
