--- a/web/src/repo/_RevSwitcher.scss
+++ b/web/src/repo/_RevSwitcher.scss
@@ -5,9 +5,8 @@
 
     &__inner {
         background: #1c2736;
-        border: 0.0625rem solid #2A3A51;
+        border: 1px solid #2A3A51;
         border-radius: .25rem;
-        font-size: .875rem;
         width: 16rem;
         display: flex;
         flex-direction: column;
@@ -21,9 +20,9 @@
         background: #151D28;
         color: white;
         font-size: inherit;
-        line-height: 1.5rem;
+        line-height: inherit;
         &::placeholder {
-            color: #93A9C8;
+            color: $color-secondary;
         }
     }
     &__list-view {
@@ -32,39 +31,22 @@
         max-height: 24rem;
     }
     &__list-item {
-        display: inline-block;
+        display: flex;
         width: 100%;
-        height: 2.5rem;
         cursor: pointer;
         padding: .25rem .5rem;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
-        font-size: .75rem;
-        line-height: 1rem;
         &:hover {
             background: #2A3A51;
+            color: white;
         }
         &--selected {
             background: #2A3A51;
-            &:hover {
-                background: #2A3A51;
-            }
         }
-        >span.icon {
-            background: #2A3A51;
-            display: inline-block;
-            width: 2.5rem;
-            height: 2rem;
-            margin-right: .5rem;
-            fill: currentColor;
-            vertical-align: middle;
-            padding-left: .6875rem;
-            padding-top: .4375rem;
-            >svg.icon {
-                width: 1.125rem;
-                height: 1.125rem;
-            }
-        }
+    }
+    &__rev-icon {
+        margin-right: .25rem;
     }
 }
