--- a/web/src/settings/_SettingsSidebar.scss
+++ b/web/src/settings/_SettingsSidebar.scss
@@ -5,9 +5,9 @@
 
     display: flex;
     flex-direction: column;
+    white-space: nowrap;
 
     &__header {
-        @extend .ui-title;
         color: #93A9C8;
         display: flex;
         align-items: center;
@@ -23,42 +23,41 @@
         flex: 0 0 auto;
         margin-right: 0.5rem;
         display: flex;
-        .icon {
-            fill: currentColor;
-            width: 1.5rem;
-            height: 1.5rem;
-        }
+    }
+
+    &__items {
+        overflow: hidden;
+        position: relative;
     }
 
     &__item {
 
         width: 100%;
         list-style: none;
+        user-select: none;
+        padding-left: 1rem;
         display: flex;
         flex-direction: column;
-        user-select: none;
-
-        &:hover {
-            background-color: rgba(42,58,81,0.7);
-        }
 
         &--active {
             color: white;
         }
 
-        &-text {
-            width: 100%;
-            padding: .25rem 1rem;
-
+        &-header, &-link {
+            height: 100%;
+            margin-left: -100%;
+            padding-left: 100%;
+            padding-top: .25rem;
+            padding-bottom: .25rem;
             display: flex;
-            align-items: center;
+        }
 
-            .icon {
-                width: 1.5em;
-                height: 1.5em;
-                fill: currentColor;
-                margin-right: 0.25rem;
-            }
+        &-link:hover {
+            background-color: rgba(42,58,81,0.7);
+        }
+
+        &-icon {
+            margin-right: .5rem;
         }
     }
 }
