web: add full-width toggle + make full width the default (#7439)
* web: add full-width toggle + make full width the default

This change adds a 'full width toggle' to the right side of all container pages. By default, all pages are now full-width with only a small amount of margin on the sides of the page (this makes the implementation slightly easier, and looks great):

![image](https://user-images.githubusercontent.com/3173176/30896400-531e7712-a305-11e7-974d-b2988aa3cd5d.png)

Clicking the toggle restores the width to the much shorter / same width we previously had on the website:

![image](https://user-images.githubusercontent.com/3173176/30896406-689c2544-a305-11e7-85d5-9bc58b4bfe4a.png)

Whether or not the display is full-width or not is stored in localstorage, so that the user preference is persistent across page reloads etc.

Fixes #7295

https://www.useloom.com/share/18f4993c5bdf4188bb812e32733ed389

| device | default (maximized) | unmaximized |
|--|--|--|
| Nexus 5X | <img src=https://user-images.githubusercontent.com/3173176/30896029-f2b62dc2-a302-11e7-97fc-7e09ffb9ea23.png width=200px> | Disabled |
| iPhone 6 | <img width=200px src=https://user-images.githubusercontent.com/3173176/30896091-52f5280a-a303-11e7-8c21-0bfa7f1b0799.png> | Disabled |
| 1280x800 | <img src=https://user-images.githubusercontent.com/3173176/30896108-752e01f8-a303-11e7-95a2-36da7131383c.png /> | <img src=https://user-images.githubusercontent.com/3173176/30896112-7f9a3922-a303-11e7-91df-35ccc53e7fb7.png /> |
| 1440x900 | ![image](https://user-images.githubusercontent.com/3173176/30896157-c9669294-a303-11e7-92df-f996c583223f.png) | ![image](https://user-images.githubusercontent.com/3173176/30896170-d3667d18-a303-11e7-8c56-898d0021ee1b.png)
| 1920x1080 | ![image](https://user-images.githubusercontent.com/3173176/30896186-fbc2d93c-a303-11e7-950b-da12243b87bc.png) | ![image](https://user-images.githubusercontent.com/3173176/30896181-f29fd18e-a303-11e7-860b-b278300

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -46,32 +46,6 @@ $media-xl: 1200px;
     src: local(-apple-system), local(BlinkMacSystemFont), local("Segoe UI"), local(Helvetica), local(Arial), local(sans-serif), local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol");
 }
 
-// Responsive Container
-
-@media (min-width: $media-sm) {
-    .container {
-        width: 540px;
-    }
-}
-
-@media (min-width: $media-md) {
-    .container {
-        width: 720px;
-    }
-}
-
-@media (min-width: $media-lg) {
-    .container {
-        width: 960px;
-    }
-}
-
-@media (min-width: $media-xl) {
-    .container {
-        width: 1140px;
-    }
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -133,14 +107,31 @@ body {
     flex-direction: column;
     align-items: center;
     &__app-router-container {
-        @extend .container;
         flex: 1 1 auto;
         min-height: 0;
         display: flex;
-        padding: 0 2.5rem;
-        @media (max-width: $media-lg) {
+        &--restricted {
+            padding: 0 2.5rem;
+            @media (max-width: $media-md) {
+                width: 100%;
+                padding: 0;
+            }
+            @media (min-width: $media-md) {
+                width: 720px;
+            }
+            @media (min-width: $media-lg) {
+                width: 960px;
+            }
+            @media (min-width: $media-xl) {
+                width: 1140px;
+            }
+        }
+        &--full-width {
+            padding: 0 5rem;
+            @media (max-width: $media-md) {
+                padding: 0;
+            }
             width: 100%;
-            padding: 0;
         }
     }
 }
