--- a/web/src/repo/_RepoNav.scss
+++ b/web/src/repo/_RepoNav.scss
@@ -29,7 +29,7 @@
 
         &-text {
             margin-left: .5rem;
-            @media (max-width: $media-lg) {
+            @media (max-width: $media-md) {
                 display: none;
             }
         }
