--- a/web/src/tree/_TreeHeader.scss
+++ b/web/src/tree/_TreeHeader.scss
@@ -26,7 +26,7 @@
         border: none;
         font-size: inherit;
 
-        @media (max-width: $media-lg) {
+        @media (max-width: $media-md) {
             display: none;
         }
 
