Fix no matches text
Fixes #7581

--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -113,5 +113,8 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+        &-text {
+            margin-left: .5rem;
+        }
     }
 }
