Collect username in signup, backfill user rows, and polish invite flow

--- a/web/src/settings/_SettingsPage.scss
+++ b/web/src/settings/_SettingsPage.scss
@@ -1,6 +1,7 @@
 @import './SettingsSidebar';
 @import './team/Team';
 @import './team/AcceptInvitePage';
+@import './user/UserProfilePage';
 @import './EditorAuthPage';
 
 .settings-page {
