--- a/web/src/settings/user/_UserProfilePage.scss
+++ b/web/src/settings/user/_UserProfilePage.scss
@@ -1,4 +1,9 @@
 .user-profile-page {
+
+    &__error {
+        color: $color-error;
+    }
+
     &__split-row {
         display: flex;
     }
@@ -6,23 +11,54 @@
     &__avatar-column {
         flex: 0 0 auto;
         padding-right: 1rem;
-        border-right: 1px solid #2A3A51;
-        margin-right: 1rem;
+        margin-right: 2rem;
         display: flex;
-        height: 4rem;
+        height: 6rem;
+        @media (min-width: $media-xl) {
+            height: 9rem
+        }
 
         .avatar-icon,
         .icon {
-            width: 4rem;
-            height: 4rem;
+            @media (min-width: $media-xl) {
+                width: 9rem;
+                height: 9rem
+            }
+            width: 6rem;
+            height: 6rem;
         }
     }
 
     &__button-row {
-        margin: 2.5rem 0
+        margin: 2.5rem 0;
+        @media (min-width: $media-xl) {
+            max-width: 50%;
+        }
     }
 
     &__button-spaced {
         margin: 0 0.25rem 0 0
+    }
+
+    &__input {
+        margin-bottom: 1rem;
+        @media (min-width: $media-xl) {
+            max-width: 50%;
+        }
+    }
+
+    &__button {
+        @media (min-width: $media-xl) {
+            max-width: 50%;
+        }
+    }
+
+    &__loader {
+        @media (min-width: $media-xl) {
+            max-width: 50%;
+        }
+        width: 100%;
+        display: flex;
+        justify-content: center;
     }
 }
